[project]
name = "follow-things-around"
version = "0.0.0+dev"
description = "Flexible tracking of whatever by detection"

readme = {file = "README.md", content-type = "text/markdown"}

license = {file = "COPYING"}

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "Pillow",
    "detectron2",
    "google-colab",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "opencv-python",
    "pandas",
    "plotly",
    "requests",
    "svt",
    "torch",
]


[project.urls]
Homepage = "https://www.robots.ox.ac.uk/~vgg/software/follow-things-around"
Repository = "https://github.com/ox-vgg/follow-things-around"


[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"


[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
# Despite the profile option being set to "black", there's still some
# options that are not correcly set in a compatible manner.  The
# following are for compatibility with black style.
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3  # multi lineoutput 3 is vert-hanging


[tool.black]
line-length = 79
target-version = ['py37', 'py38']


[tool.pylint.FORMAT]
max-line-length = 79
